@@ -4,24 +4,22 @@ dnl ===========================================================================
 
 FONTCONFIG_REQUIRED=1.0.1	dnl Same as in Pango, ???
 GDK_PIXBUF_REQUIRED=1.3.7
-GLIB_REQUIRED=2.0.0
+GLIB_REQUIRED=2.11.0
 LIBXML_REQUIRED=2.4.7
 CAIRO_REQUIRED=1.0.2
 PANGOFT2_REQUIRED=1.2.0
-POPT_REQUIRED=1.5
 
 AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(GLIB_REQUIRED)
 AC_SUBST(CAIRO_REQUIRED)
 AC_SUBST(LIBXML_REQUIRED)
 AC_SUBST(PANGOFT2_REQUIRED)
-AC_SUBST(POPT_REQUIRED)
 
 dnl ===========================================================================
 
 LIBRSVG_MAJOR_VERSION=2
-LIBRSVG_MINOR_VERSION=14
-LIBRSVG_MICRO_VERSION=3
+LIBRSVG_MINOR_VERSION=15
+LIBRSVG_MICRO_VERSION=0
 AC_SUBST(LIBRSVG_MAJOR_VERSION)
 AC_SUBST(LIBRSVG_MINOR_VERSION)
 AC_SUBST(LIBRSVG_MICRO_VERSION)
@@ -93,13 +91,6 @@ PKG_CHECK_MODULES(LIBRSVG, \
 	freetype2)
 AC_SUBST(LIBRSVG_LIBS)
 AC_SUBST(LIBRSVG_CFLAGS)
-
-dnl ===========================================================================
-
-AC_CHECK_LIB(popt, poptParseArgvString, [POPT_LIBS="-lpopt"],
-AC_MSG_ERROR([popt 1.5 or newer is required to build librsvg.
-You can download the latest version from ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/]))
-AC_SUBST(POPT_LIBS)
 
 dnl ===========================================================================
 
@@ -221,7 +212,7 @@ else
 fi
 
 have_gtk=no
-PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12, have_gtk=yes,
+PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.6.0, have_gtk=yes,
 		       have_gtk=no)
 
 GTK_VERSION=
